Eduprov: 06-08-2021 update schema org and keywords

--- a/bsc-food-processing-and-technology-course.html.html
+++ b/bsc-food-processing-and-technology-course.html.html
@@ -2,93 +2,107 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BSc Food Processing & Technology Admission Colleges Scope | Eduprov</title>
-  <meta name="description"
-    content="BSc Food Processing & Technology deals with food hygiene, chemist, nutrition, production & processing. Find the Top Colleges Admission, Career & scope @ Eduprov">
-  <meta name="keywords" content="">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/bsc-food-processing-and-technology-course.html.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BSc Food Processing & Technology Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bsc-food-processing-and-technology-course.html.html"
+      },
+      "headline": "BSc Food Processing & Technology Admission Guidance in Bangalore",
+      "description": "B.Sc. Food Processing & Technology or Bachelor of Science in Food Processing Technology is a three-year
+      undergraduate course where the one who opts for it will learn about the food processing techniques and the
+      latest technologies behind it.",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-06",
+      "dateModified": "2021-08-06"
+    }
+    </script>
+  <meta name="description" content="B.Sc. Food Processing & Technology or Bachelor of Science in Food Processing Technology is a three-year
+  undergraduate course where the one who opts for it will learn about the food processing techniques and the
+  latest technologies behind it.">
+  <meta name="keywords" content=" bsc food technology,bsc nutrition,bsc food science,bsc food and nutrition,bsc dairy technology,bsc food science and nutrition,bsc food technology colleges,bsc food science and technology,bsc food technology subjects,bsc nutrition colleges near me,bsc dairy science,bsc nutrition colleges,bsc nutrition course,bsc food processing,bsc food,bsc human nutrition,bsc hons food technology,bsc food technology course details,bsc food processing technology,after bsc food technology,subjects in bsc food technology,bsc food science subjects,bsc culinary science,bsc in food technology colleges,bsc food tech,bsc food technology colleges near me,bsc in dairy science,bsc food and technology,bsc food nutrition,bsc diet and nutrition,bsc hons food and nutrition,bsc dairy technology colleges,bsc food technology course,about bsc food technology,bsc food and nutrition colleges,bsc in culinary science,bsc food and nutrition subjects,bsc food technology duration,bsc nutritional science,bsc in diet and nutrition,bsc hons in food technology,courses after bsc food technology,ignou bsc food and nutrition,bsc dairy,bsc in food,bsc food technology admission 2020,bsc food science and nutrition subjects,bsc home science food and nutrition,bsc food microbiology,bsc food and nutrition course,bsc dairy technology course details,bsc food technology distance education,bsc food technology eligibility criteria,colleges for bsc food technology,bsc food science and nutrition colleges,bsc in food processing and technology,subjects in bsc food and nutrition,bsc food technology course duration,bsc food processing and technology,bsc food technology subjects in first year,bsc in food and nutrition colleges,bsc food technology government colleges,bsc in food technology subjects,bsc food technology details,bsc dairy technology course,bsc food science and nutrition colleges near me,bsc food processing technology and management,after bsc food science and nutrition,best colleges for bsc in food technology,bsc food technology course subjects,bsc food processing & technology admission,
+
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="BSc Food Processing & Technology Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/bsc-food-processing-and-technology-course.html.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="B.Sc. Food Processing & Technology or Bachelor of Science in Food Processing Technology is a three-year
+    undergraduate course where the one who opts for it will learn about the food processing techniques and the
+    latest technologies behind it." />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="BSc Food Processing & Technology Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="B.Sc. Food Processing & Technology or Bachelor of Science in Food Processing Technology is a three-year
+    undergraduate course where the one who opts for it will learn about the food processing techniques and the
+    latest technologies behind it." />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>BSc Food Processing & Technology </h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">BSc Food Processing & Technology</h1>
       </div>
     </div>
   </div>
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -120,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -144,7 +158,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center text-primary" id="tag-font">
+          <h2 class="text-center text-dark" id="tag-font">
             Scope
           </h2>
         </div>
