--- a/bsc-forensic-science-course.html
+++ b/bsc-forensic-science-course.html
@@ -2,94 +2,107 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BSc Forensic Science Admission, Colleges, Scope | Eduprov</title>
-  <meta name="description"
-    content="BSc forensic related to aid medical & legal investigation of death, poisoning, & drug use, Get admission, counseling, college, eligibility, career visit EDUPROV">
-  <meta name="keywords"
-    content=" bsc forensic science, bsc forensic science colleges, bsc forensic, bsc forensic science subjects, forensic science after bsc zoology, bsc forensic science admission 2020, bsc forensic science course details, bsc in forensic science colleges, bsc hons forensic science, after bsc forensic science, bsc forensic science entrance exam, about bsc forensic science, bsc forensic science colleges near me, entrance exam for bsc forensic science, bsc information security and digital forensics, forensic science after bsc chemistry, bsc in forensic science subjects, bsc forensic science details, bsc forensic medicine, bsc forensic subjects, bsc forensic science entrance exam 2020, bournemouth university forensic science, bsc forensic science admission, bsc forensic course, courses after bsc forensic science, bsc forensic science course duration, information about bsc forensic science, bsc digital forensics and cyber security, colleges offering bsc forensic science, bsc forensic science course eligibility, chandigarh university bsc forensic science, colleges for bsc in forensic science, bsc forensic science requirements, bsc forensic science best colleges, bsc forensic science information, bsc digital forensics, forensic science after bsc, honours in forensic science, bsc forensic science university, bsc forensic science admission process, bsc forensic science course fees, bsc forensic science honours, bsc forensic science course eligibility, bsc forensic science jain university, colleges for bsc in forensic science, bsc forensic science requirements, bsc forensic science best colleges, bsc forensic science information, bsc digital forensics, forensic science after bsc, honours in forensic science, bsc forensic science university, bsc forensic science admission process, bsc forensic science course fees, bsc forensic science honours, bsc information science and cyber forensics, forensic science after bsc, about bsc forensic science course, forensic bsc colleges, honours in forensic science, bsc forensic science university, bsc computer forensics, bsc forensic science admission process, bsc forensic admission, bsc forensic science course fees, bsc forensic science honours,">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/bsc-forensic-science-course.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BSc Forensic Science Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bsc-forensic-science-course.html"
+      },
+      "headline": "BSc Forensic Science Admission Guidance in Bangalore",
+      "description": "Bachelor of Science in Forensic Science or B.Sc. Forensic Science is a three-year undergraduate
+      Forensic Science course that helps various departments. Forensic Science profession is a crime and
+      laboratory-based profession.",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-06",
+      "dateModified": "2021-08-06"
+    }
+    </script>
+  <meta name="description" content="Bachelor of Science in Forensic Science or B.Sc. Forensic Science is a three-year undergraduate
+  Forensic Science course that helps various departments. Forensic Science profession is a crime and
+  laboratory-based profession.">
+  <meta name="keywords" content=" bsc forensic science,bsc forensic science colleges,subjects in forensic science,bsc forensic,bsc cyber forensic,bsc forensic science subjects,forensic science after bsc zoology,eligibility for forensic science,bsc forensic science eligibility,bsc forensic science course details,bsc in forensic science colleges,bsc digital and cyber forensic science,bsc forensic science admission 2020,bsc forensic science and criminology,institute of forensic science mumbai admission form 2020,bsc hons forensic science,after bsc forensic science,forensic science in tamil,bsc forensic science admission,bsc forensic science entrance exam,about bsc forensic science,bsc forensic science fees,entrance exam for bsc forensic science,bsc forensic science colleges near me,forensic science after bsc chemistry,bsc in forensic science subjects,bsc forensic science duration,forensic science course fees,bsc forensic science qualification,bsc forensic science application form 2020,forensic science years of study,bsc forensic subjects,bsc forensic science courses,bsc forensic medicine,bsc forensic science details,fees for bsc forensic science,bsc forensic science eligibility criteria,entry requirements for forensic science,forensic science honours,best colleges for bsc in forensic science,qualification for bsc forensic science,bsc in forensic science eligibility,bsc forensic science meaning,courses after bsc forensic science,bsc forensic colleges,b forensic science,bsc forensic course,bsc forensic science course duration,forensic science bsc colleges,bsc in forensic science and criminology,bhu bsc forensic science,bsc forensic science entrance exam 2021,bsc forensic science entrance exam 2020,bsc forensic science in bhu,bsc cyber forensic eligibility,information about bsc forensic science,bsc forensic science requirements,bsc forensic science admission 2021,colleges offering bsc forensic science,bsc forensic science course eligibility,bsc forensic science fees structure,colleges for bsc in forensic science,bsc forensic science means,bsc forensic eligibility,bsc forensic science information,forensic science courses after bsc chemistry,bsc forensic science best colleges,forensic science after bsc microbiology,bsc with forensic science,bsc digital forensics,bsc forensic science after 12th,du bsc forensic science,subjects of bsc forensic science,forensic science subjects in bsc,lpu bsc forensic science,bsc information science and cyber forensics,forensic science after bsc,eligibility criteria for bsc forensic science,honours in forensic science,bsc forensic entrance exam,forensic bsc colleges,fees of bsc forensic science,about bsc forensic science course,bsc forensic science course fees,bsc forensic science admission process,forensic science after biotechnology,bsc computer forensics,bsc forensic government colleges,bsc forensic course details,fee structure for bsc forensic science,bsc in forensic science course details,bsc forensic admission,forensic science honours degree,subjects for bsc forensic science,
+
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="BSc Forensic Science Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/bsc-forensic-science-course.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Bachelor of Science in Forensic Science or B.Sc. Forensic Science is a three-year undergraduate
+    Forensic Science course that helps various departments. Forensic Science profession is a crime and
+    laboratory-based profession." />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="BSc Forensic Science Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Bachelor of Science in Forensic Science or B.Sc. Forensic Science is a three-year undergraduate
+    Forensic Science course that helps various departments. Forensic Science profession is a crime and
+    laboratory-based profession." />
+  <meta name="twitter:image" content="" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>B.Sc Forensic Science </h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">BSc Forensic Science</h1>
       </div>
     </div>
   </div>
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -113,7 +126,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -137,7 +150,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center text-primary" id="tag-font">
+          <h2 class="text-center text-dark" id="tag-font">
             Scope
           </h2>
         </div>
