--- a/bsc-horticulture-course.html
+++ b/bsc-horticulture-course.html
@@ -2,94 +2,109 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BSc Horticulture Admission Eligibility Scope | Eduprov</title>
-  <meta name="description"
-    content="BSc Horticulture focusses on Cultivation of plants & study of seeds. Check the College Admission Criteria, cut-off, Placement, Career & Scope with EDUPROV">
-  <meta name="keywords" content=" ">
-  <meta name="author" content="Naveen">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/bsc-horticulture-course.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BSc Horticulture Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bsc-horticulture-course.html"
+      },
+      "headline": "BSc Horticulture Admission Guidance in Bangalore",
+      "description": "Bachelor of Science in Horticulture Science or B.Sc. Horticulture Science is a three year undergraduate in
+      Agriculture Science & Technology Course. It is the industry and science of plant cultivation, including the
+      process of preparing the soil for the planting of seeds, tubers, or cuttings.",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-06",
+      "dateModified": "2021-08-06"
+    }
+    </script>
+  <meta name="description" content=" Bachelor of Science in Horticulture Science or B.Sc. Horticulture Science is a three year undergraduate in
+  Agriculture Science & Technology Course. It is the industry and science of plant cultivation, including the
+  process of preparing the soil for the planting of seeds, tubers, or cuttings.">
+  <meta name="keywords" content=" bsc horticulture,bsc horticulture subjects,bsc horticulture colleges,bsc horticulture course details,bsc horticulture admission,bsc hons horticulture,bsc horticulture duration,bsc horticulture course duration,bsc horticulture eligibility,subjects in bsc horticulture,bsc agriculture horticulture,bsc horticulture entrance exam 2020,bsc horticulture 1st year subjects,after bsc horticulture,about bsc horticulture,bsc horticulture admission 2020,b sc horticulture course details,bsc horticulture courses,eligibility for bsc horticulture,bsc horticulture fees,bsc horticulture colleges near me,msc horticulture after bsc botany,duration of bsc horticulture,courses after bsc horticulture,e course bsc horticulture,bsc horticulture details,bsc honours horticulture,entrance exam for bsc horticulture,
+,
+
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="BSc Horticulture Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/bsc-horticulture-course.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content=" Bachelor of Science in Horticulture Science or B.Sc. Horticulture Science is a three year undergraduate in
+    Agriculture Science & Technology Course. It is the industry and science of plant cultivation, including the
+    process of preparing the soil for the planting of seeds, tubers, or cuttings." />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="BSc Horticulture Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content=" Bachelor of Science in Horticulture Science or B.Sc. Horticulture Science is a three year undergraduate in
+    Agriculture Science & Technology Course. It is the industry and science of plant cultivation, including the
+    process of preparing the soil for the planting of seeds, tubers, or cuttings." />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>BSc Horticulture </h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">BSc Horticulture</h1>
       </div>
     </div>
   </div>
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -118,7 +133,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -127,11 +142,9 @@
       <div class="col-md-12">
         <ul>
 
-          <li>10+2 Science stream students with Physics, Chemistry, and Biology subjects, who have passed the 12th
-            examination with 50% marks from a recognized board are eligible to pursue this course.</li>
+          <li>10+2 Science stream students with Physics, Chemistry, and Biology subjects, who have passed the 12th examination with 50% marks from a recognized board are eligible to pursue this course.</li>
 
-          <li>Also, students must have appeared for the State Level Entrance Examination to take part in the admission
-            process.</li>
+          <li>Also, students must have appeared for the State Level Entrance Examination to take part in the admission process.</li>
           <li>The detailed procedure regarding the admission and guidance can be obtained from the experts of EDUPROV.
           </li>
         </ul>
@@ -142,7 +155,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center text-primary" id="tag-font">
+          <h2 class="text-center text-dark" id="tag-font">
             Scope
           </h2>
         </div>
