--- a/bsc-mathematics-course.html
+++ b/bsc-mathematics-course.html
@@ -2,94 +2,109 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B.Sc Mathematics Admission Eligibility Scope | Eduprov</title>
-  <meta name="description"
-    content="BSc Mathematics focusses on applied scientific & organic mathematics. To get updates relating to top colleges, admission, entrance exam, counseling .EDUPROV">
-  <meta name="keywords" content=" ">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/bsc-mathematics-course.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BSc Mathematics Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bsc-mathematics-course.html"
+      },
+      "headline": "BSc Mathematics Admission Guidance in Bangalore",
+      "description": "Mathematics is the study of quantity, structure, space, and change. B.Sc. Mathematics or Bachelor of Science
+      in Mathematics is a three-year undergraduate Mathematics course that provides a wide knowledge of mathematics.
+      Mathematicians seek out patterns and formulate new conjectures.",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-07",
+      "dateModified": "2021-08-07"
+    }
+    </script>
+  <meta name="description" content="Mathematics is the study of quantity, structure, space, and change. B.Sc. Mathematics or Bachelor of Science
+  in Mathematics is a three-year undergraduate Mathematics course that provides a wide knowledge of mathematics.
+  Mathematicians seek out patterns and formulate new conjectures.">
+  <meta name="keywords" content=" bsc mathematics,bsc maths,maths honours,bsc 1st year mathematics,bsc math honours,bsc hons mathematics,bsc mathematical science,bsc applied mathematics,bhu uet physics and mathematics,bsc 2nd year mathematics,maths bsc 1st year,bhu bsc maths,bsc mathematics colleges,bsc courses without maths,bsc maths tuition near me,honours in mathematics,bsc maths course details,bsc 3rd year mathematics,maths honours in du,bsc maths colleges,bsc maths course,best colleges for bsc maths,bsc mathematics and computer science,bsc financial mathematics,calculus bsc 1st year,bsc without maths,bsc mathematics and economics,best du colleges for bsc maths honours,algebra bsc 1st year,bsc maths and physics,bsc part 1 math,bsc mathematics with computer application,ba hons mathematics,degree 1st year maths,vector calculus bsc 1st year,bsc hons mathematics colleges,bsc computer science without maths,bsc second year mathematics,bsc mathematics with computer science,discrete mathematics bsc it sem 1,ba maths honours,bsc maths colleges near me,bsc it without maths,bsc maths classes near me,bsc maths admission 2020,bsc mathematics and physics,bsc maths duration,bsc maths honours colleges,ucl bsc mathematics,bsc in mathematical science,bsc actuarial and financial mathematics,bhu bsc maths seats,mathematical physics bsc 1st year,ba economics without maths colleges,bsc mathematics and computing,math bsc part 1,iit bsc maths,bsc applied mathematics and computer science,calculus math bsc 1st year,algebra bsc 2nd year,about bsc mathematics,top colleges in du for bsc maths hons,bsc mathematics modules,mathematical physics bsc 2nd year,bsc mathematics course,best du colleges for maths honours,bsc in mathematics colleges,mathematics for natural science calicut university,bsc in physics and mathematics,bsc maths in iit madras,bsc computer science maths,bsc mathematics with foundation year,iit bombay bsc maths,bsc mathematics 1st year,bsc mathematical physics,bsc first year mathematics,bsc math calculus,bhu bsc maths placement,bsc in mathematics and physics,warwick maths bsc,bsc of mathematics,bsc econometrics and mathematical economics,seats in bhu bsc maths,mathematics bsc 3rd year,bsc pure mathematics,bsc mathematics requirements,linear algebra bsc 3rd year,bhu bsc math seat 2020,discrete mathematics bsc 3rd year,bsc maths 2nd year,best colleges for bsc maths honours in du,bsc mathematics and applied mathematics,bsc third year mathematics,bsc1st year mathematics,lse bsc mathematics and economics,bsc mathematics electronics computer science,bsc 1st year calculus,bsc computational mathematics,calculus for bsc 1st year,du colleges for bsc maths honours,bsc for maths students,bsc mathematics part time,top 10 du colleges for bsc maths hons,bsc in mathematics and computing,bsc maths government colleges,bsc maths meaning,bsc hons applied mathematics,math bsc part 2,bsc maths correspondence course,bsc physics without maths,bhu bsc maths total marks,bsc maths with computer science,bsc math classes,g100 mathematics,maths in bsc,ug maths,tuition for bsc maths near me,bsc mathematics uom,bsc mathematics physics computer science,bsc mathematics with economics,bsc with physics and maths,bsc it maths,bsc maths hons in du,best colleges in du for maths honours,bsc maths qualification,iit madras bsc mathematics,bsc maths bhu,bsc discrete mathematics,bsc mathematics best colleges,bsc maths group,bsc mathematics course duration,du colleges for maths honours,best colleges in du for bsc maths,bsc applied mathematics and physics,bsc mathematics correspondence course,bsc maths 1st year calculus,bsc maths degree,mathematics for bsc 1st year,bsc in maths honours,bsc mathematics computer science,bsc in computer science without maths,applied mathematics sem 3 bsc it,bsc final year maths,bsc in maths and physics,best colleges for bsc in mathematics,bsc applied maths,bsc mathematics classes,bsc mathematics 3rd year,bsc mathematics imperial,bsc maths and economics,imperial bsc maths,top du colleges for maths honours,bsc mathematics of finance,bsc mathematics admission guidance in bangalore,
+
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="BSc Mathematics Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/bsc-mathematics-course.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Mathematics is the study of quantity, structure, space, and change. B.Sc. Mathematics or Bachelor of Science
+    in Mathematics is a three-year undergraduate Mathematics course that provides a wide knowledge of mathematics.
+    Mathematicians seek out patterns and formulate new conjectures." />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="BSc Mathematics Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Mathematics is the study of quantity, structure, space, and change. B.Sc. Mathematics or Bachelor of Science
+    in Mathematics is a three-year undergraduate Mathematics course that provides a wide knowledge of mathematics.
+    Mathematicians seek out patterns and formulate new conjectures." />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
 
 <body>
-  <div class="bootstrap-nav">
-
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>BSc Mathematics</h1>
-        </div>
-      </div>
+  
+  
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">BSc Mathematics</h1>
       </div>
     </div>
   </div>
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -126,7 +141,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -148,7 +163,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center text-primary" id="tag-font">
+          <h2 class="text-center text-dark" id="tag-font">
             Scope
           </h2>
         </div>
