Add Changes from https://github.com/eduprov/EDUPROV-Renuka/commit/9ac902f8b31329a6c0a7cacb7c510db4356eb181

--- a/btech-in-marine.html
+++ b/btech-in-marine.html
@@ -8,8 +8,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>B.Tech Marine Engineering Admission Guidance in Bangalore</title>
   <script type="application/ld+json">
-  
-  </script>
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/btech-in-marine.html"
+      },
+      "headline": "B.Tech Marine Engineering Admission Guidance in Bangalore",
+      "description": "B.Tech Marine Engineering deals with operation  maintenance of ship Machinery. 
+      Know more about the top colleges, admission, entrance, career | EDUPROV",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-10",
+      "dateModified": "2021-08-10"
+    }
+    </script>
   <meta name="description" content="B.Tech Marine Engineering deals with operation  maintenance of ship Machinery. 
   Know more about the top colleges, admission, entrance, career | EDUPROV">
   <meta name="keywords" content=" 
